# borsh-rs

borsh/: Cargo.toml
borsh-schema-derive-internal/src/: enum_schema.rs  helpers.rs  struct_schema.rs
borsh/src/: lib.rs  schema.rs
borsh/src/de/: mod.rs
borsh/src/ser/: mod.rs
borsh/tests/: test_binary_heaps.rs  test_simple_structs.rs  test_vecs.rs
