[package]
name = "borsh"
version = "0.0.0"
authors = ["Near Inc <hello@near.org>"]
edition = "2018"
license = "MIT OR Apache-2.0"
readme = "README.md"
categories = ["encoding", "network-programming"]
repository = "https://github.com/near/borsh-rs"
homepage = "http://borsh.io"
description = """
Binary Object Representation Serializer for Hashing
"""

[lib]
name = "borsh"
path = "src/lib.rs"

[[bin]]
name = "generate_schema_schema"
path = "src/generate_schema_schema.rs"

[dependencies]
borsh-derive = { path = "../borsh-derive" }
hashbrown = { version = "0.11", optional = true }
num-rational = { version = "0.4.0", optional = true }
num-traits = { version = "0.2.14", optional = true }

[features]
default = ["std"]
std = []
rc = []
const-generics = []
ratio = ['num-rational', 'num-traits']
